fixed table body data from becoming visible above table header while scrolling

--- a/front-end/src/features/SavvyService/components/SavvyBot.module.css
+++ b/front-end/src/features/SavvyService/components/SavvyBot.module.css
@@ -21,13 +21,12 @@
 }
 
 .messageBoxWrapper {
-    width: 75%;
+    width: 70%;
 }
 
 .savvyResponse, .userMessage {
     display: flex;
     gap: 20px;
-    padding: 25px;
     color: white;
     font-size: 14px;
     font-weight: 400;
@@ -45,6 +44,8 @@
     position: relative;
     max-height: 100%;
     overflow-x: auto;
+    margin-top: 75px;
+    margin-bottom: 75px;
 }
 
 .savvyResponse {
@@ -81,7 +82,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    width: 700px;
+    width: 400px;
     margin-bottom: 8px;
     margin: 0 auto;
 }
@@ -113,7 +114,7 @@
 
 .messageBar .messageBarWrapper {
     position: relative;
-    width: 80%;
+    width: 72%;
     padding: 10px;
     display: flex;
     align-items: center;
